[tool.poetry]
name = "pyto"
version = "0.1.0"
description = "Python command tools"
authors = ["Oleksandr Litus <oleks.litus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
pyto = "pyto.main:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
